--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: silver;
+    background-color: gold;
     margin: 0;
     padding: 0;
     direction: rtl;
