--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
 .header .logo {
     font-size: 24px;
     font-weight: bold;
-    color: #00bcd4; /* Sky Blue */
 }
 
 .navbar ul {
@@ -48,7 +47,7 @@ body {
 }
 
 .navbar ul li a:hover {
-    color: #f44336; /* Light Red */
+    color: #4caf50;
 }
 
 .admin-section {
@@ -63,7 +62,7 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #00bcd4; /* Sky Blue */
+    border: 1px solid #4caf50;
     border-radius: 5px;
     background-color: #333;
     color: #fff;
@@ -74,14 +73,14 @@ body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #00bcd4; /* Sky Blue */
+    background-color: #4caf50;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .admin-login-form button:hover {
-    background-color: #008c9e; /* Darker Sky Blue */
+    background-color: #45a049;
 }
 
 #admin-controls h2 {
@@ -93,7 +92,7 @@ body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #f44336; /* Light Red */
+    background-color: #4caf50;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -101,7 +100,7 @@ body {
 }
 
 #admin-controls button:hover {
-    background-color: #d32f2f; /* Darker Red */
+    background-color: #45a049;
 }
 
 .content {
@@ -120,7 +119,7 @@ body {
     text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
-    color: #00bcd4; /* Sky Blue */
+    color: #fff;
 }
 
 .gallery.grid {
@@ -155,14 +154,14 @@ body {
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
-    background-color: #00bcd4; /* Sky Blue */
+    background-color: #4caf50;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .card button:hover {
-    background-color: #008c9e; /* Darker Sky Blue */
+    background-color: #45a049;
 }
 
 .card:nth-child(even) {
